Add EvoMaster test generation